# EDD_TP

./: .gitignore
TP 1/: Ejercicio_1.py  Ejercicio_2.py  Ejercicio_3.py  Ejercicio_4.py  Ejercicio_5.py  Ejercicio_6.py
TP 2/: README
TP 2/ejercicio 1/: ejemploDeUso.py  genero.py  mamboreta_admin.py  pelicula.py  persona.py
TP 2/ejercicio 2/: equipacionTipoEnum.py  temporada.py
TP 3/: README
TP 3/Punto 1 y 2/: linkedStack.py  linkedStackExt.py
TP 3/Punto 3 y 4/: linked_list.py  linked_list_ext_abstract.py  list_client.py
TP 3/Punto 5 y 6/: deque_client.py
TP 3/Punto 7/: cliente.py  linked_queue_ext.py  tramite.py
TP 4/Punto 1 y 2/: linked_binary_tree_ext.py  linked_binary_tree_ext_abstract.py  linked_binary_tree_ext_client.py
TP 4/Punto 5 y 6/: array_heap_ext.py  array_heap_ext_client.py
TP 4/env/: pyvenv.cfg
TP 4/punto 3 y 4/: sorted_priority_queue.py  sorted_priority_queue_client.py
TP 5/: main.py  superheroes_villanos.txt
TP 5/Punto 1 y 2/: sorted_table_map.py  sorted_table_map_abstract.py  sorted_table_map_client.py
TP 5/env/: pyvenv.cfg
TP 5/punto 3/: main.py  procesar_superheroes_villanos.py
TP_1/: Ejercicio_1.py  Ejercicio_2.py  Ejercicio_6.py
TP_2/ejercicio_1/: genero.py  mamboretaAdminAbstract.py  persona.py
TP_2/ejercicio_2/: camiseta.py  camisetaTipoEnum.py  castoloAdmin.py  castoloAdminAbstract.py  ejemploDeUso.py  equipacionTipoEnum.py  equipo.py  liga.py  temporada.py
TP_3/Poetry/: pyproject.toml
TP_3/Punto_1_2/: linkedStackExt.py  linked_stack_ext_abstract.py  (+1 more)
TP_3/Punto_7/: iter.py  (+1 more)
TP_5/: README
env/: pyvenv.cfg
(+15 files in other folders)
